# TTDEngine

./: CMakeLists.txt  README.md  interface.cpp  interface.h  main.cpp  memory_model.cpp  memory_model.h  taint_aarch.cpp  taint_amd64.cpp  trace_analysis.cpp  trace_analysis.h  trace_analysis_amd64.cpp  trace_analysis_amd64.h
libs/capstone/libs/: capstone_dll.exp  capstone_dll.lib
